[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/player bullet.gd" type="Script" id=1]
[ext_resource path="res://art/beams.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 2.43843
height = 31.7051

[node name="player bullet" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 1000

[node name="bullet" type="Sprite" parent="."]

transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )
region = true
region_rect = Rect2( 291, 25, 77, 116 )

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

transform/pos = Vector2( -1.19209e-07, 1.2517e-06 )
transform/scale = Vector2( 0.4, 0.914286 )
rect = Rect2( -5, -17.5, 10, 35 )

[connection signal="area_enter" from="." to="." method="_on_player_bullet_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_player_bullet_body_enter"]

[connection signal="exit_screen" from="VisibilityNotifier2D" to="." method="_on_exit_screen"]


